Fix mailbox dropdown not centered and overflowing on tablet
Use fixed positioning relative to viewport instead of absolute
positioning relative to the notification button, which caused
the dropdown to extend off-screen on tablet-sized viewports.

--- a/src/view/components/inAppNotifications/InAppNotifications.module.scss
+++ b/src/view/components/inAppNotifications/InAppNotifications.module.scss
@@ -1,16 +1,17 @@
 .inAppNotifications {
-	position: absolute;
+	position: fixed;
+	top: 3.5rem;
+	left: 50%;
+	transform: translateX(-50%);
 	background-color: white;
 	box-shadow: 3px 3px 10px #a9adf49a;
 	border-radius: 15px;
 	padding: 10px;
 	display: flex;
 	flex-direction: column;
-	width: fit-content;
+	width: calc(100% - 1rem);
 	max-width: 30rem;
 	color: var(--text-title);
-	transform: translateX(-50%);
-	left: 50%;
 	z-index: 100;
 
 	a {
@@ -19,16 +20,6 @@
 		&:hover {
 			color: black;
 		}
-	}
-
-	@media screen and (max-width: 768px) {
-		position: fixed;
-		top: 3.5rem;
-		left: 0.5rem;
-		right: 0.5rem;
-		max-width: none;
-		width: auto;
-		transform: none;
 	}
 }
 
